# template-email-sender

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
template_email_sender/: send_email.py  template_email.py
