[tool.poetry]
name = "template-email-sender"
version = "0.1.0"
description = ""
authors = ["sujankapadia <sak900@gmail.com>"]
readme = "README.md"
packages = [{include = "template_email_sender"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
jinja2 = "^3.1.2"
types-pyyaml = "^6.0.12.9"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
coverage = "^7.2.5"
flake8 = "^6.0.0"
flake8-bugbear = "^23.5.9"
pylint = "^2.17.4"
isort = "^5.12.0"
bandit = "^1.7.5"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
